--- a/PaymentPage/PaymentPage.csproj
+++ b/PaymentPage/PaymentPage.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
   </ItemGroup>
 
